--- a/views/login.hbs
+++ b/views/login.hbs
@@ -32,11 +32,9 @@
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                    <h1 class="h4 text-gray-900 mb-4">Đăng nhập</h1>
                   </div>
-                  <div class="alert alert-warning">
-                    <strong>Warning!</strong> Indicates a warning that might need attention.
-                  </div>
+                  {{>message}}
                   <form class="user" method="POST" action="/login">
                     <div class="form-group">
                       <input name="username" type="username" class="form-control form-control-user"
@@ -46,13 +44,10 @@
                       <input name="password" type="password" class="form-control form-control-user"
                         id="exampleInputPassword" placeholder="Password">
                     </div>
-                    <input value="Login" type="submit" class="btn btn-primary btn-user btn-block">
+                    <input value="Đăng nhập" type="submit" class="btn btn-primary btn-user btn-block">
                     </input>
                   </form>
                   <hr>
-                  <div class="text-center">
-                    <a class="small" href="forgot-password.html">Forgot Password?</a>
-                  </div>
                 </div>
               </div>
             </div>
