--- a/views/teacher/exam.hbs
+++ b/views/teacher/exam.hbs
@@ -1,15 +1,30 @@
 <div class="row">
-    <div class="semester ml-2 mb-2">
-        <p class="labelSemester">Năm học: 2019-2020</p>
-    </div>
-    <form class="semester labelSemester ml-2 mb-2" action="./" method="GET">
-        <div align="center">
+
+    <form class="semester labelSemester ml-2 mb-2" action="/teacher/exam" method="GET">
+        <span align="center">
+            <span>Năm học:</span>
+            <select class="semester" style="border: none; color:blanchedalmond" name="year"
+                onchange="this.form.submit();">
+                {{#each allYearSemester}}
+                {{#if this}}
+                <option value="{{this}}">{{this}}</option>
+                {{/if}}
+                {{/each}}
+            </select>
+        </span>
+        <span align="center">
             <span>Học kì:</span>
-            <select class="semester" style="border: none; color:blanchedalmond" name="state" onchange="this.form.submit();">
+            <select class="semester" style="border: none; color:blanchedalmond" name="semester"
+                onchange="this.form.submit();">
+                {{#if isLastSemester}}
+                <option value="2">2</option>
+                <option value="1">1</option>
+                {{else}}
                 <option value="1">1</option>
                 <option value="2">2</option>
+                {{/if}}
             </select>
-        </div>
+        </span>
     </form>
 </div>
 
@@ -23,20 +38,18 @@
                         <th>NGÀY THI</th>
                         <th>PHÒNG THI</th>
                         <th>TIẾT BẮT ĐẦU</th>
-                        <th>GIÁM THỊ 1</th>
-                        <th>GIÁM THỊ 2</th>
                     </tr>
                 </thead>
+                {{#each scheduleExam}}
                 <tbody>
                     <tr>
-                        <td>Toán</td>
-                        <td>23/07/2020</td>
-                        <td>A101</td>
-                        <td>3</td>
-                        <td>Nguyễn Văn A</td>
-                        <td>Nguyễn Văn b</td>
+                        <td>{{subjectName}}</td>
+                        <td>{{dayExam}}</td>
+                        <td>{{roomName}}</td>
+                        <td>{{startSection}}</td>
                     </tr>
                 </tbody>
+                {{/each}}
             </table>
         </div>
     </div>
