--- a/views/teacher/score.hbs
+++ b/views/teacher/score.hbs
@@ -1,7 +1,27 @@
-<div class="row justify-content-center">
-    <div class='col'>abc</div>
+<div class="row">
+    <div class="col-md-6">
+        <div class="row">
+        <div class="semester ml-2 mb-2">
+            <p class="labelSemester">Năm học: 2019-2020</p>
+        </div>
+        <form class="form-inline labelSemester ml-2 mb-2" action="" method="GET" onchange="submit()">
+            <div class="semester form-group">
+                <lable for="semester">Học kì :</lable>
+                <select class="semester mb-1 accordion"
+                    style="border: none; color:blanchedalmond; height:auto !important" name="semester" id="semester">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                </select>
+            </div>
+            </div>
+        </form>
+    </div>
+    <div class="col-md-6" style="text-align:end">
+        <div class="semester ml-2 mb-2">
+            <p class="labelSemester">GVCN: Nguyễn Văn B</p>
+        </div>
+    </div>
 </div>
-
 <div class="card shadow mb-4">
     <div class="card-body">
         <div class="table-responsive">
@@ -15,22 +35,71 @@
                         <th>CỘT 2</th>
                         <th>CỘT 3</th>
                         <th>CỘT 4</th>
+                        <th>Chỉnh sửa</th>
                     </tr>
                 </thead>
                 {{#each listScoreView}}
                 <tbody>
                     <tr>
-                        <td>{{id}}</td>
-                        <td>{{studentID}}</td>
+                        <td style="width: 5%">{{id}}</td>
+                        <td style="width: 15%;">{{studentID}}</td>
                         <td>{{fullName}}</td>
-                        <td>{{score1}}</td>
-                        <td>{{score2}}</td>
-                        <td>{{score3}}</td>
-                        <td>{{score4}}</td>
+                        <td style="width: 10%; text-align:end">{{score1}}</td>
+                        <td style="width: 10%; text-align:end">{{score2}}</td>
+                        <td style="width: 10%; text-align:end">{{score3}}</td>
+                        <td style="width: 10%; text-align:end">{{score4}}</td>
+                        <td style="width: 10%; text-align:center"><i class="fa fa-pencil-square-o" data-toggle="modal"
+                                data-target="#modalScoreEdit" aria-hidden="true"></i></td>
                     </tr>
                 </tbody>
                 {{/each}}
             </table>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="modalScoreEdit" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header text-center">
+                <h4 class="modal-title w-100 font-weight-bold">Cập nhật điểm số</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body mx-3">
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-studentID">Mã học sinh</label>
+                    <input type="text" id="defaultForm-studentID" class="form-control validate">
+                </div>
+
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-studentName">Tên học sinh</label>
+                    <input type="text" id="defaultForm-studentName" class="form-control validate">
+                </div>
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-score1">Cột 1</label>
+                    <input type="number" id="defaultForm-score1" class="form-control validate">
+                </div>
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-score1">Cột 2</label>
+                    <input type="number" id="defaultForm-score1" class="form-control validate">
+                </div>
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-score1">Cột 3</label>
+                    <input type="number" id="defaultForm-score1" class="form-control validate">
+                </div>
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-score1">Cột 4</label>
+                    <input type="number" id="defaultForm-score1" class="form-control validate">
+                </div>
+
+
+
+            </div>
+            <div class="modal-footer d-flex justify-content-center">
+                <button class="btn btn-danger">Xác nhận</button>
+            </div>
         </div>
     </div>
 </div>
