--- a/views/teacher/score.hbs
+++ b/views/teacher/score.hbs
@@ -1,31 +1,26 @@
 <div class="row">
     <div class="col-md-6">
         <div class="row">
-        <div class="semester ml-2 mb-2">
-            <p class="labelSemester">Năm học: 2019-2020</p>
+            <div class="semester ml-2 mb-2">
+                <p class="labelSemester">Năm học: {{year}}</p>
+            </div>
+            <div class="semester ml-2 mb-2">
+                <p class="labelSemester">Học kỳ: {{semesterID}}</p>
+            </div>
+
         </div>
-        <form class="form-inline labelSemester ml-2 mb-2" action="" method="GET" onchange="submit()">
-            <div class="semester form-group">
-                <lable for="semester">Học kì :</lable>
-                <select class="semester mb-1 accordion"
-                    style="border: none; color:blanchedalmond; height:auto !important" name="semester" id="semester">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                </select>
-            </div>
-            </div>
-        </form>
     </div>
     <div class="col-md-6" style="text-align:end">
         <div class="semester ml-2 mb-2">
-            <p class="labelSemester">GVCN: Nguyễn Văn B</p>
+            <p class="labelSemester">GVCN: {{managerClassName}}</p>
         </div>
     </div>
 </div>
-<div class="card shadow mb-4">
+<div class="card shadow mb-4 row">
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+            <table class="table table-bordered" id="" width="100%" cellspacing="0"
+                style="font-size: 14px; color: black">
                 <thead>
                     <tr>
                         <th>STT</th>
@@ -35,7 +30,8 @@
                         <th>CỘT 2</th>
                         <th>CỘT 3</th>
                         <th>CỘT 4</th>
-                        <th>Chỉnh sửa</th>
+                        <th>TB</th>
+                        <th>SỬA</th>
                     </tr>
                 </thead>
                 {{#each listScoreView}}
@@ -48,8 +44,9 @@
                         <td style="width: 10%; text-align:end">{{score2}}</td>
                         <td style="width: 10%; text-align:end">{{score3}}</td>
                         <td style="width: 10%; text-align:end">{{score4}}</td>
+                        <td style="width: 10%; text-align:end">{{gpa}}</td>
                         <td style="width: 10%; text-align:center"><i class="fa fa-pencil-square-o" data-toggle="modal"
-                                data-target="#modalScoreEdit" aria-hidden="true"></i></td>
+                                data-target="#{{dataTarget}}" aria-hidden="true"></i></td>
                     </tr>
                 </tbody>
                 {{/each}}
@@ -57,10 +54,12 @@
         </div>
     </div>
 </div>
-<div class="modal fade" id="modalScoreEdit" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+
+{{#each listScoreView}}
+<div class="modal fade" id="{{dataTarget}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
+        <form class="modal-content" action="{{actionForm}}" method="POST">
             <div class="modal-header text-center">
                 <h4 class="modal-title w-100 font-weight-bold">Cập nhật điểm số</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -70,36 +69,41 @@
             <div class="modal-body mx-3">
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-studentID">Mã học sinh</label>
-                    <input type="text" id="defaultForm-studentID" class="form-control validate">
+                    <input name="studentID" type="text" id="defaultForm-studentID" class="form-control validate"
+                        value="{{studentID}}" readonly>
                 </div>
 
                 <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-studentName">Tên học sinh</label>
-                    <input type="text" id="defaultForm-studentName" class="form-control validate">
+                    <label data-error="wrong" data-success="right" for="defaultForm-studentName">Tên học
+                        sinh</label>
+                    <input type="text" id="defaultForm-studentName" class="form-control validate" value="{{fullName}}"
+                        readonly>
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-score1">Cột 1</label>
-                    <input type="number" id="defaultForm-score1" class="form-control validate">
+                    <input name="score1" type="number" step="0.01" min="0" max="10" id="defaultForm-score1"
+                        class="form-control validate" value="{{score1}}">
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-score1">Cột 2</label>
-                    <input type="number" id="defaultForm-score1" class="form-control validate">
+                    <input name="score2" type="number" step="0.01" min="0" max="10" id="defaultForm-score1"
+                        class="form-control validate" value="{{score2}}">
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-score1">Cột 3</label>
-                    <input type="number" id="defaultForm-score1" class="form-control validate">
+                    <input name="score3" type="number" step="0.01" min="0" max="10" id="defaultForm-score1"
+                        class="form-control validate" value="{{score3}}">
                 </div>
                 <div class="md-form mb-2 form-inline">
                     <label data-error="wrong" data-success="right" for="defaultForm-score1">Cột 4</label>
-                    <input type="number" id="defaultForm-score1" class="form-control validate">
+                    <input name="score4" type="number" step="0.01" min="0" max="10" id="defaultForm-score1"
+                        class="form-control validate" value="{{score4}}">
                 </div>
-
-
-
             </div>
             <div class="modal-footer d-flex justify-content-center">
-                <button class="btn btn-danger">Xác nhận</button>
+                <button class="btn btn-danger" type="submit">Xác nhận</button>
             </div>
-        </div>
+        </form>
     </div>
 </div>
+{{/each}}
